--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -18,9 +18,23 @@ header{
         margin-left: auto;
         margin-right: auto;
     }
+    .login-wrapper-hide{
+        display: none;
+    }
     .login-wrapper{
         position: relative;
         bottom: 6rem;
+        animation: fadeIn 0.6s ease;
+    }
+    @keyframes fadeIn{
+        from{
+            bottom: 10rem;
+            opacity: 0;
+        }
+        to{
+            bottom: 6rem;
+            opacity: 1;
+        }
     }
     input{
         margin-bottom: 1.5rem;
