--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,7 +1,8 @@
+@import "mixins.scss";
 header{
     background: rgba(0,0,0,0.2);
     width: 100%;
-    height: 100vh;
+    height: 120vh;
     .display-3{
         font-size: 3.5rem;
         font-weight: 400;
@@ -39,6 +40,60 @@ header{
     input{
         margin-bottom: 1.5rem;
     }
+    .msg-login{
+        display: none;
+    }
+    .msg-succes{
+        @include msgLogin;
+        background: rgba(0, 105, 217, 0.6);
+        color: white;
+        font-weight: 600;
+        animation: happyJump 0.3s ease-out 1;
+    }
+    @keyframes happyJump{
+        from{
+            opacity: 0;
+            transform: scale(9)
+        }
+        to{
+            opacity: 1;
+            transform: scale(1)
+        }
+    }
+    .msg-wrong{
+        @include msgLogin;
+        background: rgba(200, 35, 51, 0.6);
+        color: white;
+        font-weight: 600;
+        animation: wrongJump 0.3s ease-out 1;
+    }
+    @keyframes wrongJump{
+        from{
+            opacity: 0;
+            transform: scale(9)
+        }
+        to{
+            opacity: 1;
+            transform: scale(1)
+        }
+    }
+    .msg-warning{
+        @include msgLogin;
+        background: rgba(224, 168, 0, 0.6);
+        font-weight: 600;
+        animation: warningJump 0.3s ease-out 1;
+    }
+    @keyframes warningJump{
+        from{
+            opacity: 0;
+            transform: scale(9)
+        }
+        to{
+            opacity: 1;
+            transform: scale(1)
+        }
+    }
+    /* msg-login msg-succes msg-wrong msg-warning */
 }
 
 /* footer{
