--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 header {
   background: rgba(0, 0, 0, 0.2);
   width: 100%;
-  height: 120vh;
+  /* height: 120vh; */
   /* msg-login msg-succes msg-wrong msg-warning */
 }
 header .display-3 {
@@ -10,6 +10,13 @@ header .display-3 {
 }
 header .jumbotron {
   height: 55%;
+  background: #cccccc;
+}
+header .btn-comenzar-hide {
+  display: none;
+}
+header .btn-comenzar {
+  display: initial;
 }
 header .user-pic {
   width: 8rem;
@@ -19,22 +26,83 @@ header .user-pic {
   margin-bottom: 1.5rem;
   margin-left: auto;
   margin-right: auto;
+  overflow: hidden;
+}
+header .UnknoUser {
+  background-image: url("../assets/UserUnknow.svg");
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-repeat: no-repeat;
+  animation: fadeUpImageUnknowUser 0.5s ease 1;
+}
+@keyframes fadeUpImageUnknowUser {
+  0% {
+    opacity: 0;
+    transform: scale(0);
+  }
+  80% {
+    opacity: 1;
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+header .user-pic-uno {
+  background-image: url("../assets/HerculesBueno.svg");
+  background-position: center center;
+  width: 105%;
+  height: 105%;
+  border-radius: 50%;
+  background-repeat: no-repeat;
+  animation: fadeUpImageUserUno 0.5s ease 1;
+}
+@keyframes fadeUpImageUserUno {
+  from {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+header .user-pic-dos {
+  background-image: url("../assets/Herculina.svg");
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-repeat: no-repeat;
+  animation: fadeUpImageUserDos 0.5s ease 1;
+}
+@keyframes fadeUpImageUserDos {
+  from {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0px);
+  }
 }
 header .login-wrapper-hide {
   display: none;
 }
 header .login-wrapper {
   position: relative;
-  bottom: 6rem;
+  bottom: 3.5rem;
   animation: fadeIn 0.6s ease;
 }
 @keyframes fadeIn {
   from {
-    bottom: 10rem;
+    bottom: 7.5rem;
     opacity: 0;
   }
   to {
-    bottom: 6rem;
+    bottom: 3.5rem;
     opacity: 1;
   }
 }
@@ -108,6 +176,10 @@ header .msg-warning {
     opacity: 1;
     transform: scale(1);
   }
+}
+
+.main-sections {
+  display: none;
 }
 
 /* footer{
