--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -2,13 +2,20 @@
 header{
     background: rgba(0,0,0,0.2);
     width: 100%;
-    height: 120vh;
+    /* height: 120vh; */
     .display-3{
         font-size: 3.5rem;
         font-weight: 400;
     }
     .jumbotron{
         height: 55%;
+        background: rgb(204, 204, 204);
+    }
+    .btn-comenzar-hide{
+        display: none;
+    }
+    .btn-comenzar{
+        display: initial;
     }
     .user-pic{
         width: 8rem;
@@ -18,22 +25,83 @@ header{
         margin-bottom: 1.5rem;
         margin-left: auto;
         margin-right: auto;
+        overflow: hidden;
+    }
+    .UnknoUser{
+        background-image: url('../assets/UserUnknow.svg');
+        background-position: center center;
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+        background-repeat: no-repeat;
+        animation: fadeUpImageUnknowUser 0.5s ease 1;
+    }
+    @keyframes fadeUpImageUnknowUser{
+        0%{
+            opacity: 0;
+            transform: scale(0);
+        }
+        80%{
+            opacity: 1;
+            transform: scale(1.2);
+        }
+        100%{
+            transform: scale(1)
+        }
+    }
+    .user-pic-uno{
+        background-image: url('../assets/HerculesBueno.svg');
+        background-position: center center;
+        width: 105%;
+        height: 105%;
+        border-radius: 50%;
+        background-repeat: no-repeat;
+        animation: fadeUpImageUserUno 0.5s ease 1;
+    }
+    @keyframes fadeUpImageUserUno{
+        from{
+            opacity: 0;
+            transform: translateY(30px);
+        }
+        to{
+            opacity: 1;
+            transform: translateY(0px);
+        }
+    }
+    .user-pic-dos{
+        background-image: url('../assets/Herculina.svg');
+        background-position: center center;
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+        background-repeat: no-repeat;
+        animation: fadeUpImageUserDos 0.5s ease 1;
+    }
+    @keyframes fadeUpImageUserDos{
+        from{
+            opacity: 0;
+            transform: translateY(30px);
+        }
+        to{
+            opacity: 1;
+            transform: translateY(0px);
+        }
     }
     .login-wrapper-hide{
         display: none;
     }
     .login-wrapper{
         position: relative;
-        bottom: 6rem;
+        bottom: 3.5rem;
         animation: fadeIn 0.6s ease;
     }
     @keyframes fadeIn{
         from{
-            bottom: 10rem;
+            bottom: 7.5rem;
             opacity: 0;
         }
         to{
-            bottom: 6rem;
+            bottom: 3.5rem;
             opacity: 1;
         }
     }
@@ -94,6 +162,9 @@ header{
         }
     }
     /* msg-login msg-succes msg-wrong msg-warning */
+}
+.main-sections{
+    display: none;
 }
 
 /* footer{
