--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -17,6 +17,12 @@ header{
     .btn-comenzar{
         display: initial;
     }
+    .hide-when-login{
+        display: none;
+    }
+    .inpt-login{
+        display: initial;
+    }
     .user-pic{
         width: 8rem;
         height: 8rem;
@@ -238,10 +244,10 @@ header{
         }  
     }
     .p-sumar{
-        border-bottom: 2px solid #ffc107;
+        font-weight: 600;
     }
     .p-reset{
-        border-bottom: 2px solid #dc3545;
+        font-weight: 600;
     }
     
 }
