--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -172,12 +172,7 @@ header{
 .main-sections{
     display: none;
 }
-
-/* footer{
-    position: absolute;
-    top: 100%;
-    text-align: center;
-} */
+/**/
 .subir-scroll{
     position: fixed;
     right: .5rem;
@@ -251,3 +246,4 @@ header{
     }
     
 }
+@import "gastosFijos.scss"
