pruebas de color h2

--- a/css/styles.css
+++ b/css/styles.css
@@ -273,4 +273,6 @@ header .msg-warning {
   box-shadow: 2px 2px 2px rgba(15, 143, 194, 0.6);
 }
 
+/* #ff7062 */
+
 /*# sourceMappingURL=styles.css.map */
