--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,249 +1,20 @@
 @import "mixins.scss";
-header{
-    background: rgba(0,0,0,0.2);
-    width: 100%;
-    /* height: 120vh; */
-    .display-3{
-        font-size: 3.5rem;
-        font-weight: 400;
-    }
-    .jumbotron{
-        height: 55%;
-        background: rgb(204, 204, 204);
-    }
+@import "main.scss";
+@import "gastosFijos.scss";
+@import "footer.scss";
+@import "stickyHeader.scss";
+@import "header.scss";
+.jumbotron{
+    position: relative;
+    top: 0;
+    margin-bottom: 0;
+    /* height: 30vh; */
+    background: rgb(204, 204, 204);
     .btn-comenzar-hide{
         display: none;
     }
     .btn-comenzar{
         display: initial;
     }
-    .hide-when-login{
-        display: none;
-    }
-    .inpt-login{
-        display: initial;
-    }
-    .user-pic{
-        width: 8rem;
-        height: 8rem;
-        border-radius: 50%;
-        background: aqua;
-        margin-bottom: 1.5rem;
-        margin-left: auto;
-        margin-right: auto;
-        overflow: hidden;
-    }
-    .UnknoUser{
-        background-image: url('../assets/UserUnknow.svg');
-        background-position: center center;
-        width: 100%;
-        height: 100%;
-        border-radius: 50%;
-        background-repeat: no-repeat;
-        animation: fadeUpImageUnknowUser 0.5s ease 1;
-    }
-    @keyframes fadeUpImageUnknowUser{
-        0%{
-            opacity: 0;
-            transform: scale(0);
-        }
-        80%{
-            opacity: 1;
-            transform: scale(1.2);
-        }
-        100%{
-            transform: scale(1)
-        }
-    }
-    .user-pic-uno{
-        background-image: url('../assets/HerculesBueno.svg');
-        background-position: center center;
-        width: 105%;
-        height: 105%;
-        border-radius: 50%;
-        background-repeat: no-repeat;
-        animation: fadeUpImageUserUno 0.5s ease 1;
-    }
-    @keyframes fadeUpImageUserUno{
-        from{
-            opacity: 0;
-            transform: translateY(30px);
-        }
-        to{
-            opacity: 1;
-            transform: translateY(0px);
-        }
-    }
-    .user-pic-dos{
-        background-image: url('../assets/Herculina.svg');
-        background-position: center center;
-        width: 100%;
-        height: 100%;
-        border-radius: 50%;
-        background-repeat: no-repeat;
-        animation: fadeUpImageUserDos 0.5s ease 1;
-    }
-    @keyframes fadeUpImageUserDos{
-        from{
-            opacity: 0;
-            transform: translateY(30px);
-        }
-        to{
-            opacity: 1;
-            transform: translateY(0px);
-        }
-    }
-    .login-wrapper-hide{
-        display: none;
-    }
-    .login-wrapper{
-        position: relative;
-        bottom: 3.5rem;
-        animation: fadeIn 0.6s ease;
-    }
-    @keyframes fadeIn{
-        from{
-            bottom: 7.5rem;
-            opacity: 0;
-        }
-        to{
-            bottom: 3.5rem;
-            opacity: 1;
-        }
-    }
-    input{
-        margin-bottom: 1.5rem;
-    }
-    .msg-login{
-        display: none;
-    }
-    .msg-succes{
-        @include msgLogin;
-        background: rgba(0, 105, 217, 0.6);
-        color: white;
-        font-weight: 600;
-        animation: happyJump 0.3s ease-out 1;
-    }
-    @keyframes happyJump{
-        from{
-            opacity: 0;
-            transform: scale(9)
-        }
-        to{
-            opacity: 1;
-            transform: scale(1)
-        }
-    }
-    .msg-wrong{
-        @include msgLogin;
-        background: rgba(200, 35, 51, 0.6);
-        color: white;
-        font-weight: 600;
-        animation: wrongJump 0.3s ease-out 1;
-    }
-    @keyframes wrongJump{
-        from{
-            opacity: 0;
-            transform: scale(9)
-        }
-        to{
-            opacity: 1;
-            transform: scale(1)
-        }
-    }
-    .msg-warning{
-        @include msgLogin;
-        background: rgba(224, 168, 0, 0.6);
-        font-weight: 600;
-        animation: warningJump 0.3s ease-out 1;
-    }
-    @keyframes warningJump{
-        from{
-            opacity: 0;
-            transform: scale(9)
-        }
-        to{
-            opacity: 1;
-            transform: scale(1)
-        }
-    }
-    /* msg-login msg-succes msg-wrong msg-warning */
 }
-.main-sections{
-    display: none;
-}
-/**/
-.subir-scroll{
-    position: fixed;
-    right: .5rem;
-    bottom: 0rem;
-    background: #ffc107;
-    opacity: 0.4;
-    border-radius: 50%;
-    padding: .5rem;
-    cursor: pointer;
-    transition: all 0.3s ease;
-    &:hover{
-        opacity: 1;
-    }
-}
-.uno{
-    padding-top: 3rem;
-    h2{
-        margin-bottom: 2rem;
-        background: #E9ECEF;
-        padding: 1rem;
-    } 
-    .first-label{
-        margin-top: 1.5rem;
-    }   
-    .btn-borrar,.btn-add{
-        margin-top: 1rem;
-    }
-}
-.otros-gastos{
-    padding: 3rem;
-    h2{
-        margin-bottom: 2rem;
-        background: #E9ECEF;
-        padding: 1rem;
-    }
-    input{
-        margin-top: 2rem;
-    }
-    button{
-        margin-top: 1rem;
-        margin-left: .5rem;
-        margin-right: .5rem;
 
-    }
-}
-.sumar{
-    padding: 3rem;
-    h2{
-        margin-bottom: 2rem;
-        background: #E9ECEF;
-        padding: 1rem;
-    }
-    input{
-        margin-top: 2rem;
-    }
-    button{
-        margin-top: 1rem;
-        margin-left: .5rem;
-        margin-right: .5rem;
-        position: relative;
-        transition: all 0.3s ease;
-        &:hover{
-            transform: scale(1.2);
-        }  
-    }
-    .p-sumar{
-        font-weight: 600;
-    }
-    .p-reset{
-        font-weight: 600;
-    }
-    
-}
-@import "gastosFijos.scss"
