add gastos js crear tareas comenzado, revisar

--- a/css/styles.css
+++ b/css/styles.css
@@ -152,7 +152,7 @@ footer {
   z-index: 9998;
   overflow: visible;
   padding: 10px;
-  background: #e28a8a;
+  background: #ff7062;
   transition: all 1s ease;
   /*  */
 }
