add gasto fijo nodos creados

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -4,6 +4,7 @@
 @import "footer.scss";
 @import "stickyHeader.scss";
 @import "header.scss";
+@import "addGastoFijoLista.scss";
 .jumbotron{
     position: relative;
     top: 0;
