--- a/css/styles.css
+++ b/css/styles.css
@@ -380,6 +380,42 @@ footer {
   }
 }
 
+.wrapper-add-lista {
+  width: 100%;
+}
+.wrapper-add-lista .lista {
+  width: 100%;
+  padding-left: 0;
+}
+.wrapper-add-lista li {
+  position: relative;
+  width: 100%;
+  padding: 0.5rem;
+  border: 2px solid #0f8fc2;
+  background: rgba(255, 112, 98, 0.5);
+  list-style: none;
+  margin: 1rem 0 0.5rem 0;
+  /* color: white; */
+  border-radius: 5px;
+  display: flex;
+  flex: 1 2 1;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+.wrapper-add-lista a {
+  flex: 50%;
+  padding: 0.5rem;
+}
+.wrapper-add-lista .boton-guardar, .wrapper-add-lista .boton-borrar {
+  flex: 1 0 1;
+  padding: 0.5rem;
+  border: 2px solid #007bff;
+  border-radius: 5px;
+  background: #1080f8;
+  color: white;
+  margin-left: 0;
+}
+
 .jumbotron {
   position: relative;
   top: 0;
