--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -5,6 +5,7 @@
 @import "stickyHeader.scss";
 @import "header.scss";
 @import "addGastoFijoLista.scss";
+@import "variables.scss";
 .jumbotron{
     position: relative;
     top: 0;
