--- a/css/styles.css
+++ b/css/styles.css
@@ -393,15 +393,13 @@ footer {
   width: 100%;
   padding: 0.5rem;
   border: 2px solid #0f8fc2;
-  background: rgba(255, 112, 98, 0.5);
   list-style: none;
   margin: 1.5rem 0 0.5rem 0;
-  /* color: white; */
   border-radius: 5px;
   display: flex;
   flex: 1 2 1;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: space-around;
 }
 .wrapper-add-lista a {
   flex: 50%;
@@ -418,6 +416,28 @@ footer {
   cursor: pointer;
 }
 
+.p-output-no-value {
+  width: 80%;
+  padding: 0.5rem;
+  background: rgba(207, 130, 14, 0.6);
+  position: relative;
+  left: 10%;
+  border-radius: 5px;
+  border: 2px solid rgba(218, 103, 10, 0.8);
+}
+
+.lista-otros-gastos-guardados {
+  padding-left: 0;
+  margin-top: 2rem;
+}
+.lista-otros-gastos-guardados li {
+  list-style: none;
+  padding: 1rem;
+  margin-top: 0.2rem;
+  background: rgba(4, 154, 173, 0.6);
+  color: white;
+}
+
 .jumbotron {
   position: relative;
   top: 0;
@@ -431,5 +451,10 @@ footer {
 .jumbotron .btn-comenzar {
   display: initial;
 }
+
+/* 
+width: 80%;
+    margin-left: auto;
+    margin-right: auto; */
 
 /*# sourceMappingURL=styles.css.map */
