--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,11 +1,12 @@
 @import "mixins.scss";
+@import "variables.scss";
 @import "main.scss";
 @import "gastosFijos.scss";
 @import "footer.scss";
 @import "stickyHeader.scss";
 @import "header.scss";
 @import "addGastoFijoLista.scss";
-@import "variables.scss";
+@import "newOtrosGastos.scss";
 .jumbotron{
     position: relative;
     top: 0;
@@ -19,4 +20,7 @@
         display: initial;
     }
 }
-
+/* 
+width: 80%;
+    margin-left: auto;
+    margin-right: auto; */
