--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -13,10 +13,13 @@
         display: none;
     }
     .inpt-login{
-        display: initial;
+        display: initial;        
     }
     .col-12{
         display: initial;
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;
     }
     .user-pic{
         width: 8rem;
