new styles for sections

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -13,7 +13,10 @@
         display: none;
     }
     .inpt-login{
-        display: initial;        
+        display: initial;
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;        
     }
     .col-12{
         display: initial;
