--- a/css/styles.css
+++ b/css/styles.css
@@ -31,8 +31,19 @@
 }
 .uno h2 {
   margin-bottom: 2rem;
-  background: #E9ECEF;
+  background: #007bff;
   padding: 1rem;
+  width: 75%;
+  margin-left: auto;
+  margin-right: auto;
+  font-weight: 700;
+  color: white;
+  border-radius: 10px;
+}
+.uno p {
+  width: 75%;
+  margin-left: auto;
+  margin-right: auto;
 }
 .uno .first-label {
   margin-top: 1.5rem;
@@ -46,8 +57,11 @@
 }
 .otros-gastos h2 {
   margin-bottom: 2rem;
-  background: #E9ECEF;
+  background: #007bff;
   padding: 1rem;
+  font-weight: 700;
+  color: white;
+  border-radius: 10px;
 }
 .otros-gastos input {
   margin-top: 2rem;
@@ -65,6 +79,10 @@
   margin-bottom: 2rem;
   background: #E9ECEF;
   padding: 1rem;
+  background: #007bff;
+  font-weight: 700;
+  color: white;
+  border-radius: 10px;
 }
 .sumar input {
   margin-top: 2rem;
@@ -168,6 +186,14 @@ footer {
   justify-content: space-between;
   align-items: center;
 }
+.sticky-header .sticky-header-user-name {
+  position: absolute;
+  left: 6rem;
+  top: 35%;
+  text-transform: uppercase;
+  color: white;
+  font-weight: 500;
+}
 .sticky-header .user-pic {
   width: 4rem;
   height: 4rem;
@@ -211,6 +237,9 @@ footer {
 }
 .initial-header .inpt-login {
   display: initial;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
 }
 .initial-header .col-12 {
   display: initial;
@@ -395,7 +424,7 @@ footer {
   position: relative;
   width: 100%;
   padding: 0.5rem;
-  border: 2px solid #0f8fc2;
+  border: 0.5px solid #81c5e0;
   list-style: none;
   margin: 1.5rem 0 0.5rem 0;
   border-radius: 5px;
