--- a/scss/_addGastoFijoLista.scss
+++ b/scss/_addGastoFijoLista.scss
@@ -9,7 +9,7 @@
         position: relative;
         width: 100%;
         padding: 0.5rem;
-        border: 2px solid rgb(15, 143, 194);
+        border: .5px solid #81c5e0;
         list-style: none;
         margin: 1.5rem 0 .5rem 0;
         border-radius: 5px;
