--- a/scss/_stickyHeader.scss
+++ b/scss/_stickyHeader.scss
@@ -20,6 +20,14 @@
         justify-content: space-between;
         align-items: center;
     }
+    .sticky-header-user-name{
+        position: absolute;
+        left: 6rem;
+        top: 35%;
+        text-transform: uppercase;
+        color: white;
+        font-weight: 500;
+    }
     .user-pic{
         width: 4rem;
         height: 4rem;
