--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -36,10 +36,13 @@
         color: white;
         border-radius: 10px;
     } 
-    p{
+    .p-gastos-fijos{
         width: 75%;
         margin-left: auto;
         margin-right: auto;
+    }
+    .my-2{
+        width: 80%;
     }
     .first-label{
         margin-top: 1.5rem;
