--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -3,8 +3,6 @@
     width: 100%;
     position: relative;
     height: auto;
-    /* top: 30vh; */
-    /* msg-login msg-succes msg-wrong msg-warning */
     .display-3{
         font-size: 3.5rem;
         font-weight: 400;
@@ -13,7 +11,7 @@
         display: none;
     }
     .inpt-login{
-        display: initial;
+        display: block;
         width: 80%;
         margin-left: auto;
         margin-right: auto;        
