--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -17,6 +17,7 @@
     padding: .5rem;
     cursor: pointer;
     transition: all 0.3s ease;
+    z-index: 999999;
     &:hover{
         opacity: 1;
     }
