--- a/scss/_newOtrosGastos.scss
+++ b/scss/_newOtrosGastos.scss
@@ -1,13 +1,40 @@
+.wrapper-add-lista-otros-gastos{
+    text-align: center;
+    .lista{
+        padding-left: 0;
+        margin-top: 2rem;
+    }    
+    li{
+        display: block;
+        list-style: none;
+        padding: 1rem;
+        margin-top: 0.2rem;
+        background: rgba(4, 154, 173, 0.6);
+        color: white;
+        border-radius: 10px;
+    }
+    a{
+        display: block;
+    }
+    button{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+.output-no-value-otros-gastos{
+    margin-top: 2rem;
+}
+
 .p-output-no-value{
     width: 80%;
     padding: 0.5rem;
-    background: rgba(207, 130, 14, 0.6);
+    background: rgb(255, 193, 7);
     position: relative; 
     left: 10%;
     border-radius: 5px;
-    border: 2px solid rgba(218, 103, 10, 0.8);
 }
-.lista-otros-gastos-guardados{
+/* .lista{
     padding-left: 0;
     margin-top: 2rem;
     li{
@@ -17,4 +44,7 @@
         background: rgba(4, 154, 173, 0.6);
         color: white;
     }
-}
+    a{
+        display: block;
+    }
+} */
